<resources>
    <string name="app_name">Yolo Date</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="log_in_with_your_phone_number">Log In with your phone number</string>
    <string name="welcome_to_yolo_date">Welcome to Yolo Date</string>
    <string name="Password">TextView</string>
    <string name="Email">TextView</string>
    <string name="Login">Button</string>
    <string name="Picture">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="welcome_follow_these_steps_to_complete_the_process">Welcome! follow these steps to complete the process</string>
    <string name="sign_out_new">Sign Out</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
    <string name="Logo">LOGO</string>
    <string name="login_with_your_email">Login with your email</string>
    <string name="by_clicking_the_log_in_you_agree_with_our_terms_learn_how_we_process_your_data_in_our_privacy_policy_and_cookies_policy">By clicking the Log In, you agree with our Terms, Learn how we process your data in our Privacy Policy and Cookies Policy.</string>
    <string name="Logo_home">home_logo</string>
    <string name="Logo_white">White</string>
    <string name="name">Name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="sign_in">Sign In</string>
    <string name="Logo_logo">logoloo</string>
    <string name="graphic">image</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up2">Sign Up</string>
    <string name="todo2">TODO</string>
    <string name="other">other</string>
    <string name="ImgSignUp">ImgSignUp</string>
    <string name="default_web_client_id">mGoogleSignInClient</string>
</resources>
